--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,7 +1,7 @@
 // Header "Sidewinder" (left handed)
 
 #header {
-    width: 500px;
+    //width: 500px;
     display: block;
     position: fixed;
     left: 10px;
